# spoki

./: .gitignore  CNAME  LICENSE  README.md  _config.yml  contact.md  index.md
_includes/: header.html
_layouts/: base.html
_sass/: animations.scss  fonts.scss  site.scss
assets/css/: main.scss
evaluation/: README.md  setup.py
evaluation/src/cse/analysis/: addasn.py  addgeo.py  aggregatecontacttypes.py  contacttypes.py  topports.py
evaluation/src/cse/analysis/database/: gnchecker.py  greynoise.py
evaluation/src/cse/logs/: confirmationmatcher.py  phasematcher.py  writer.py
evaluation/src/cse/malware/: clean.py  download.py  filter.py  payloadcleaner.py
evaluation/src/cse/malware/database/: databasetocsv.py  vtchecker.py
evaluation/src/cse/payloads/: analyzer.py
evaluation/src/cse/types/: probe_confirmation.py
evaluation/src/cse/types/protocols/: icmp.py
logs/example/: 2021-10-13.21:00:00.test.spoki.tcp.raw.1634158800.csv  2021-10-13.21:00:00.test.spoki.tcp.scamper.1634158800.csv  2021-10-13.22:00:00.test.spoki.tcp.raw.1634162400.csv  2021-10-13.22:00:00.test.spoki.tcp.scamper.1634162400.csv
malware/: Makefile  README.md  setup.py
malware/src/cse/logs/: eventmatcher.py  phasematcher.py  reader.py
malware/src/cse/malware/: clean.py  download.py  filter.py  kafkaclean.py  kafkafilter.py  resettopics.py
malware/src/cse/malware/database/: virustotal.py
malware/src/cse/tools/: assemble.py  testing.py
malware/src/cse/types/: analyzer.py  event.py  packet.py  probe_request.py
malware/src/cse/types/protocols/: tcp.py  udp.py
scripts/: disable-rst.sh  enable-rst.sh
spoki/: CMakeLists.txt  README.md  caf-application.conf  configure  setup.sh
spoki/cmake/: FindSCAMPER.cmake  FindTRACE.cmake  FindWANDIO.cmake  build_config.hpp.in  spoki-generate-enum-strings.cpp
spoki/libspoki/: CMakeLists.txt
spoki/libspoki/spoki/: all.hpp  atoms.hpp  buffer.hpp  collector.hpp  config.hpp  consistent_hash_map.hpp  crc.hpp  defaults.hpp  fwd.hpp  hashing.hpp  logger.hpp  operation.hpp  packet.hpp  target_key.hpp  task.hpp  time.hpp  unique_c_ptr.hpp
spoki/libspoki/spoki/analysis/: classification.hpp  classify.hpp  consistency.hpp  regression.hpp
spoki/libspoki/spoki/cache/: entry.hpp  rotating_store.hpp  shard.hpp  store.hpp  timeout.hpp
spoki/libspoki/spoki/net/: endpoint.hpp  five_tuple.hpp  icmp.hpp  icmp_type.hpp  protocol.hpp  socket_guard.hpp  tcp.hpp  tcp_opt.hpp  udp.hpp  udp_hdr.hpp  unix.hpp
spoki/libspoki/spoki/probe/: method.hpp  payloads.hpp  request.hpp  udp_prober.hpp
spoki/libspoki/spoki/scamper/: async_decoder.hpp  broker.hpp  driver.hpp  ec.hpp  manager.hpp  ping.hpp  reply.hpp
spoki/libspoki/spoki/trace/: instance.hpp  processing.hpp  reader.hpp  reporting.hpp  state.hpp
spoki/libspoki/src/: buffer.cpp  collector.cpp  crc.cpp  defaults.cpp  hashing.cpp  packet.cpp  task.cpp  time.cpp
spoki/libspoki/src/analysis/: classification_strings.cpp  classify.cpp  consistency.cpp  regression.cpp
spoki/libspoki/src/cache/: entry.cpp  rotating_store.cpp  shard.cpp  store.cpp  timeout.cpp
spoki/libspoki/src/net/: five_tuple.cpp  icmp.cpp  icmp_type_strings.cpp  protocol_strings.cpp  socket_guard.cpp  tcp.cpp  tcp_opt.cpp  tcp_opt_strings.cpp  udp.cpp  udp_hdr.cpp  unix.cpp
spoki/libspoki/src/probe/: method.cpp  method_strings.cpp  payloads.cpp  request.cpp  udp_prober.cpp
spoki/libspoki/src/scamper/: async_decoder.cpp  broker.cpp  driver.cpp  ec_strings.cpp  manager.cpp  ping.cpp  reply.cpp
spoki/libspoki/src/trace/: instance.cpp  processing.cpp  reader.cpp  reporting.cpp  state.cpp
spoki/libspoki/test/: collector.cpp  consistent_hash_map.cpp  core-test.cpp  core-test.hpp  test.hpp
spoki/libspoki/test/analysis/: classify.cpp  consistency.cpp  regression.cpp
spoki/libspoki/test/cache/: rotating_store.cpp  store.cpp
spoki/libspoki/test/probe/: payloads.cpp
spoki/patches/: patch-ping-tcp-win.txt  patch-pingtimes.txt  patch-ppsmax.txt  patch-tcprst.txt  patch-tcpsynack.txt  writebuf-scamper.patch
spoki/patches/limbo/: shard.diff  state.diff
spoki/tools/: CMakeLists.txt  README.md
spoki/tools/hdr/: batch_reader.hpp  is_ip_address.hpp  udp_processor.hpp
spoki/tools/hdr/perf/: counting.hpp  packet_provider.hpp
spoki/tools/src/: batch_reader.cpp  filter.cpp  is_ip_address.cpp  measure_driver.cpp  measure_io.cpp  measure_stores.cpp  measure_stringify.cpp  measure_unix.cpp  spoki.cpp  udp_processor.cpp  udprober.cpp  udproberd.cpp
spoki/tools/src/perf/: counting.cpp  packet_provider.cpp  spoki-core.cpp  spoki-ingest.cpp  spoki-io.cpp  spoki-scamper.cpp
